package tn.esprit.formations.entities;

import java.util.HashSet;
import java.util.Set;

public class User {
    private int id;
    private role role;
    enum role {ADMIN, USER}
}
