@startuml

class User {
  - id: int
  - nom: String
  - role: String
  + sInscrire(formation: Formation)
}

class Formation {
  - id: int
  - titre: String
  - description: String
  - competencesCibles: List<String>
  + ajouterModule(module: Module)
  + estComplete(user: User): boolean
}

class Module {
  - id: int
  - titre: String
  - contenu: String
  - ordre: int
  + estTermine(user: User): boolean
}

class Quiz {
  - id: int
  - type: String {final, module}
  - scoreMinReussite: int
  + evaluer(reponses: Map<Question, String>): int

}

class Question {
  - id: int
  - texte: String
  - type: String {QCM, texte}
  - options: List<String>
  + verifierReponse(reponse: String): boolean
}

class Inscription {
  - id: int
  - dateInscription: LocalDate
  - progression: int
  - modulesCompletes: Set<Integer>
  + mettreAJourProgression()
}

class Certification {
  - id: int
  - dateObtention: LocalDate
  + genererPDF(): File
}

class ProfilApprentissage {
  - competences: Map<String, Integer>
  - certifications: List<Certification>
  + calculerTauxReussite(): double
}

' Relations '
User "1" -- "0..*" Inscription
Formation "1" *-- "1..*" Module : contient
Formation "1" -- "1" Quiz : testFinal
Module "0..1" -- "0..1" Quiz : quizAssocie
Quiz "1" *-- "1..*" Question : contient
Inscription "1" -- "1" Formation
Certification "1" -- "1" Formation
User "1" -- "1" ProfilApprentissage
ProfilApprentissage "0..*" -- "0..*" Certification : possède

@enduml